fix: adicionando overflow para ver se conserta bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -661,6 +661,10 @@ h4 {
   * {
     font-size: 0.875rem;
   }
+
+  .projectDesc {
+    overflow-y: auto;
+  }
 }
 
 @media screen and (max-height: 600px) and (min-width: 600px){
